--- a/mainStyle.css
+++ b/mainStyle.css
@@ -42,7 +42,7 @@ input::placeholder {
 	font-size: 18px;
 }
 
-a {
+a, button {
 	text-decoration: none;
 	background: transparent;
 }
@@ -77,7 +77,7 @@ a {
   color: #f1f1f1;
 }
 
-.item3 span {
+.item3 span, .item3 p{
   text-decoration: none;
   color: #818181;
   transition: 0.3s;
@@ -183,9 +183,13 @@ a {
     text-align: center;
     border-radius: .25rem;
     height: 3.0rem;
-    line-height: 3.125rem;
+    /* line-height: 3.125rem; */
     font-size: 1.25rem;
     width: 5.8125rem;
+	
+	/* text-decoration: none; */
+	/* background: transparent; */
+	
 }
 
 
@@ -279,21 +283,23 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
-button {
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}
+/* button { */
+  /* background-color: #4CAF50; */
+  /* color: white; */
+  /* padding: 14px 20px; */
+  /* margin: 8px 0; */
+  /* border: none; */
+  /* cursor: pointer; */
+  /* width: 100%; */
+/* } */
 
 button:hover {
   opacity: 0.8;
 }
 
-
+.signout {
+	display: none; 
+}
 
 /* span.psw { */
   /* float: right; */
