--- a/searchStyle.css
+++ b/searchStyle.css
@@ -24,14 +24,22 @@ body {
 }
 
 .item1 {grid-area: header;}
+.item3 {grid-area: header;}
 
 #i1 {
 	text-align: center;
 }
+#i3 {
+	text-align: right;
+}
+
+/* .item3 span:hover, .item3 span:focus { */
+  /* color: #f1f1f1; */
+/* } */
 
 .body-container {
 	display: table;
-	height: 700px;
+	height: 720px;
 	width: 100%;
 	/* position: fixed; */
 	z-index: 1;
@@ -49,17 +57,230 @@ body {
 	/* position: absolute; */
 	/* height: 100%; */
 	right: 0;
+	/* display: inline-block; */
+}
+
+.right-part a {
+	color: black;
+	float: left;
+	padding: 8px 16px;
+	text-decoration: none;
+	border: 1px solid #ddd; /* Gray */
+}
+
+.right-part a.active{
+	background-color: #4CAF50;
+	color: white;
+}
+
+.right-part a:hover:not(.active) {background-color: #ddd;}
+
+#defBTN
+{
+	display: none;
+}
+
+#lhBTN
+{
+	display: none;
+}
+
+#hlBTN
+{
+	display: none;
+}
+
+/* #tb2 */
+/* { */
+	/* display: none; */
+/* } */
+
+/* #tb3 */
+/* { */
+	/* display: none; */
+/* } */
+
+button {
+  background-color: darkorange;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 25%;
 }
 
 #map{
 	display: table-cell;
     /* height: 100%;   */
 	/* The height is 400 pixels */ 
-    width: 70%;  /* The width is the width of the web page */
+    width: 60%;  /* The width is the width of the web page */
+}
+/* #sortFilter { */
+	
+/* } */
+
+#filtering {
+	right: 0;
+}
+
+#sorting {
+	left: 0;
+	/* hight: 20%; */
+}
+#tb{
+	right: 0;
+}
+
+#ft {
+	right: 10%;
+	top: 20%;
 }
 
 #headPicture {
 	/* height: 100%; */
 	display: table-cell;
-	width: 30%;
+	width: 35%;
+	/* height: 50%; */
+}
+
+table {
+  border: 1px solid #1C6EA4;
+  background-color: darkorange;
+  /* width: 100%; */
+  text-align: left;
+  border-collapse: collapse;
+}
+table td, table th {
+  border: 1px solid #AAAAAA;
+  padding: 3px 2px;
+}
+table tbody td {
+  font-size: 13px;
+}
+table tr:nth-child(even) {
+  background: orange;
+}
+table thead {
+  background: #1C6EA4;
+  background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+  background: -webkit-linear-gradient(top, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+  background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1C6EA4 100%);
+  border-bottom: 2px solid #444444;
+}
+table thead th {
+  font-size: 15px;
+  font-weight: bold;
+  color: #FFFFFF;
+  border-left: 2px solid #D0E4F5;
+}
+table thead th:first-child {
+  border-left: none;
+}
+.left-box {
+	display: none;
+	position: absolute;
+	top: 0;
+	right: 0;
+	box-sizing: border-box;
+	padding: 40px;
+	width: 300px;
+	height: 400px;
+	
+}
+
+h1 {
+	margin: 0 0 20px 0;
+	font-weight: 300;
+	font-size: 28px;
+}
+
+input[type="text"],
+input[type="number"],
+#level, #major, #beds, #countries
+{
+	display: block;
+	box-sizing: border-box;
+	margin-bottom: 20px;
+	padding: 4px;
+	width: 220px;
+	height: 32px;
+	border: none;
+	outline: none;
+	border-bottom: 1px solid #aaa;
+	font-family: sans-serif;
+	font-weight: 400;
+	font-size: 15px;
+	transition: 0.2s ease;
+}
+
+input[type="button"]
+{
+	margin-bottom: 28px;
+	width: 120px;
+	height: 32px;
+	background: #4682B4;
+	border: none;
+	border-radius: 2px;
+	color: #fff;
+	font-family: sans-serif;
+	text-transform: uppercase;
+	transition: 0.2s ease;
+	cursor: pointer;
+}
+
+input[type="reset"]
+{
+	margin-bottom: 28px;
+	width: 120px;
+	height: 32px;
+	background: #f44336;
+	border: none;
+	border-radius: 2px;
+	color: #fff;
+	font-family: sans-serif;
+	text-transform: uppercase;
+	transition: 0.2s ease;
+	cursor: pointer;
+}
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.9);
+  overflow-x: hidden;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
 }
